<resources>
    <string name="app_name">Fintech</string>
    <string name="description_add_emoji">add emoji</string>
    <string name="hint_message">Написать…</string>
    <string name="desc_button_send_message">button send message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_title_subscribed_streams">Subscribed</string>
    <string name="tab_title_all_streams">All streams</string>
    <string name="online">online</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="name_surname">Name Surname</string>
    <string name="title_topic">Topic: #%1$s</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="status_active">active</string>
    <string name="status_offline">offline</string>
    <string name="no_result_found">No result found</string>
    <string name="title_topic_percent">#%1$s</string>
    <string name="toast_file">Size of file is large</string>

    <string name="create_stream">Create stream</string>
    <string name="message">Message</string>
    <string name="create">Create</string>
    <string name="label_name">Name</string>
    <string name="label_topic">Topic</string>
    <string name="label_description">Description</string>
    <string name="input_description">Input description</string>
    <string name="input_topic">Input topic</string>
    <string name="input_name">Input name</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_reaction">Add reaction</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_topic">Edit topic</string>
    <string name="btn_open">Open</string>
    <string name="hint_topic">#topic</string>
    <string name="button_add">button add</string>
    <string name="no_network_connection">No network connection</string>

    <string name="deleted_message">"Deleted message"</string>
    <string name="copied_to_clipboard">"Message copied to clipboard"</string>
    <string name="desc_search_icon">desc search icon</string>
</resources>