<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_light_black"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:autofillHints="@string/message"
        android:backgroundTint="@color/white"
        android:hint="@string/input_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/label_description" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:autofillHints="@string/message"
        android:backgroundTint="@color/white"
        android:hint="@string/input_description"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/normal_text_size" />

    <Button
        android:id="@+id/btn_create_stream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="@color/green_dark"
        android:text="@string/create"
        android:textAllCaps="false" />
</LinearLayout>