<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_light_black"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_topic"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/input_name"
        style="@style/edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/input_topic"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/action_edit" />
</LinearLayout>