<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_light_black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/action_edit"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:drawableStartCompat="@drawable/ic_edit_24" />

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/action_delete"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:drawableStartCompat="@drawable/ic_delete_24" />

    <TextView
        android:id="@+id/btn_add_reaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/action_add_reaction"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:drawableStartCompat="@drawable/ic_emoji_24" />
</LinearLayout>