<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_black"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_avatar"
        android:layout_width="@dimen/size_avatar_image"
        android:layout_height="@dimen/size_avatar_image"
        android:layout_marginTop="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/roundRectImageViewShape"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
        tools:text="@string/name_surname" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="#BCBCBC"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/profile_online_status"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="@string/in_a_meeting" />

    <TextView
        android:id="@+id/profile_online_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/text_lime"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@id/profile_status"
        app:layout_constraintEnd_toEndOf="@id/profile_name"
        app:layout_constraintStart_toEndOf="@id/profile_status"
        app:layout_constraintTop_toTopOf="@id/profile_status"
        tools:text="@string/online" />

    <ProgressBar
        android:id="@+id/pb_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>